--- a/simulador-thermocarry/simulator.html
+++ b/simulador-thermocarry/simulator.html
@@ -10,79 +10,85 @@
 </head>
 
 <body>
-    <div class="header-simulator">
-        <div class="container-simulator">
-            <ul class="navbar-simulator">
-                <li> <a href="" style="text-decoration: none;"> <b> Home </b></a></li>
-                <li> <a href="" style="text-decoration: none;"> <b> Simulador </b></a></li>
-                <li> <a href="" style="text-decoration: none;"> <b> Cadastro </b></a></li>
-                <li> <a href="" style="text-decoration: none;"> <b> Login </b></a></li>
-            </ul>
-            <img src="logo_thermo-carry-ps.png" width="25%">
-        </div>
-
-        <h1 id="titulo-simulador">Simulador Financeiro</h1>
-        <div class="caixa-simulador-dois">
-            <!--Começo da caixa 2 do simulador-->
-            <div class="caixa-simulator-um">
-                <!--Começo da caixa 1 do simulador-->
-                <div class="conteudo-simulator">
-
-                    <h5 id="sub-titulos-simulator">Selecione uma vacina:</h5>
-                    <br><select id="sel_vacinas">
-                        <option value="19.22">AstraZeneca</option>
-                        <option value="52.12">Pfizer</option>
-                        <option value="52.66">CoronaVac</option>
-                        <option value="52.66">Janssen</option>
-                    </select>
-                    <br><br>
-
-                    <h5 id="sub-titulos-simulator">Quantas vacinas serão transportadas por viagem?</h5>
-                    <input id="in_quantidade"><br><br>
-
-                    <h5 id="sub-titulos-simulator">Taxa média de desperdício por viagem:</h5>
-                    <input id="in_taxa"><br><br>
-
-                    <h5 id="sub-titulos-simulator">Média de viagens por dia:</h5>
-                    <input id="in_viagens"><br><br>
-
-                    <button onclick="desperdício()" id="btn-simulator">Simular</button><br><br><br><br>
-
-                    <div id="div_resultado"></div>
+    <header>
+            <div class="container">
+                <div class="logo">
+                    <img src="logo_thermo-carry-ps.png" alt="">
                 </div>
+                <ul class="navbar">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">Login</a></li>
+                    <li><a href="#">Cadastro</a></li>
+                    <li><a href="#">Simulador </a></li>
+                    <li><a href="#">Dashboard</a></li>
+                </ul>
             </div>
-            <!--Fim da caixa 1 do simulador-->
+    </header>
+
+    <h1 id="titulo-simulador">Simulador Financeiro</h1>
+    <div class="caixa-simulador-dois">
+        <!--Começo da caixa 2 do simulador-->
+        <div class="caixa-simulator-um">
+            <!--Começo da caixa 1 do simulador-->
+            <div class="conteudo-simulator">
+
+                <h5 id="sub-titulos-simulator">Selecione uma vacina:</h5>
+                <br><select id="sel_vacinas">
+                    <option value="19.22">AstraZeneca</option>
+                    <option value="52.12">Pfizer</option>
+                    <option value="52.66">CoronaVac</option>
+                    <option value="52.66">Janssen</option>
+                </select>
+                <br><br>
+
+                <h5 id="sub-titulos-simulator">Quantas vacinas serão transportadas por viagem?</h5>
+                <input id="in_quantidade"><br><br>
+
+                <h5 id="sub-titulos-simulator">Taxa média de desperdício por viagem:</h5>
+                <input id="in_taxa"><br><br>
+
+                <h5 id="sub-titulos-simulator">Média de viagens por dia:</h5>
+                <input id="in_viagens"><br><br>
+
+                <button onclick="desperdício()" id="btn-simulator">Simular</button><br><br><br><br>
+
+                <div id="div_resultado"></div>
+            </div>
         </div>
-        <!--Fim da caixa 2 do simulador-->
+        <!--Fim da caixa 1 do simulador-->
     </div>
-    <footer id="rodape-simulator">
-
-        <div class="navbar-rodape">
-            <div class="caixas-rodape">
-                <h4 id="f-rodape">FALE CONOSCO</h4>
-                <a href="" style="text-decoration: none;">atendimento@thermocarry</a>
+    <!--Fim da caixa 2 do simulador-->
+    <footer>
+        <div class="conteudo_footer">
+            <div class="fale_conosco">
+                <p class="titulos_footer">Fale conosco</p>
+                <div class="barra"></div>
+                <a href="mailto:patrik.souza@sptech.school">atendimento@thermocarry</a>
             </div>
-
-            <div class="caixas-rodape">
-                <h4 id="s-rodape">SAC</h4>
-                <a href="" style="text-decoration: none;"> (XX)XXXXX-XXXX </a>
+            <div class="sac">
+                <p class="titulos_footer">Sac</p>
+                <div class="barra"></div>
+                <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
             </div>
-
-            <img id="img-rodape" src="logo_thermo-carry-ps.png" width="30%">
-
-            <div class="caixas-rodape">
-                <h4 id="r-rodape">REDES SOCIAL</h4>
-                <a href="" style="text-decoration: none;"> LINKEDIN </a><br>
-                <a href="" style="text-decoration: none;"> FACEBOOK </a>
+            <div class="logo_footer">
+                <img src="logo_thermo-carry-ps.png" alt="">
+                <!-- <p>© 2022 ThermoCarry • Todos os direitos reservados •</p> DESISTO DE DEIXAR ESSA PORRA NO MEIO-->
             </div>
-
-            <div class="caixas-rodape">
-                <h4 id="n-rodape">NOSSOS CONTEÚDOS</h4>
-                <a href="" style="text-decoration: none;"> HOME </a><br>
-                <a href="" style="text-decoration: none;"> SIMULADOR FINANCEIRO </a>
+           <div class="redes_socias">
+                <p class="titulos_footer">Redes Socias</p>
+                <div class="barra"></div>
+                <a href="#">Facebook</a>
+                <a href="#">Instagram</a>
+            </div> 
+            <div class="nossos_conteudos">
+                <p class="titulos_footer">Nossos conteudos</p>
+                <div class="barra"></div>
+                <a href="#">Home</a>
+                <a href="#">Cadastro</a>
+                <a href="#">Login</a>
+                <a href="#">Simulador financeiro</a>
             </div>
         </div>
-        <p id="p-rodape">© 2022 ThermoCarry • Todos os direitos reservados •</p>
     </footer>
 
 </body>
