--- a/simulador-thermocarry/simulator.html
+++ b/simulador-thermocarry/simulator.html
@@ -13,7 +13,7 @@
     <header>
             <div class="container">
                 <div class="logo">
-                    <img src="logo_thermo-carry-ps.png" alt="">
+                    <img src="img-site/logo_thermo-carry-2.png" alt="">
                 </div>
                 <ul class="navbar">
                     <li><a href="index.html">Home</a></li>
@@ -71,7 +71,7 @@
                 <a href="tel:+5511983326043">(xx)xxxx-xxxx</a>
             </div>
             <div class="logo_footer">
-                <img src="logo_thermo-carry-ps.png" alt="">
+                <img src="img-site/logo_thermo-carry-2.png" alt="">
                 <!-- <p>© 2022 ThermoCarry • Todos os direitos reservados •</p> DESISTO DE DEIXAR ESSA PORRA NO MEIO-->
             </div>
            <div class="redes_socias">
