Alterações na tela home minha e do patrik, adicionando div ao texto da containermain

--- a/tela-home/home-patrik/TelaHome.html
+++ b/tela-home/home-patrik/TelaHome.html
@@ -32,7 +32,7 @@
         <!-- Colocar todo conteudo do "meio" do site aqui dentro -->
         <div class="containermain">
             <div class="cm_conteudo">
-                <h1>Nossa empresa</h1>
+                <h1 class="titulo">Nossa empresa</h1>
                 <p>As vacinas dispõem de condições específicas para serem transportados por conta da sensibilidade às
                     variações de temperatura. É crucial que os termolábeis permaneçam estáveis até chegar ao destino
                     final, e esse é o maior desafio para a indústria farmacêutica.
