Subindo tela home

--- a/tela-home/tela-home/TelaHome.html
+++ b/tela-home/tela-home/TelaHome.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThermoCarry V02</title>
+    <title>ThermoCarry</title>
     <link rel="stylesheet" href="template.css">
+    <link rel="shortcut icon" href="img-site/logo_thermo-carry-2.png" type="image/x-icon" />
 </head>
 
 <body>
     <header>
         <div class="container">
             <div class="logo">
-                <img src="logo_thermo-carry-2.png" alt="">
+                <img src="img-site/logo_thermo-carry-2-escrita.png" alt="">
 
             </div>
             <ul class="navbar">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="TelaHome.html">Home</a></li>
                 <li><a href="#">Login</a></li>
                 <li><a href="#">Cadastro</a></li>
-                <li><a href="#">Simulador</a></li>
+                <li><a href="#">Simulador Financeiro</a></li>
 
             </ul>
         </div>
@@ -31,13 +32,20 @@
     <main>
         <!-- Colocar todo conteudo do "meio" do site aqui dentro -->
         <div class="containermain">
-
+            <div class="cm_conteudo">
+                <h1 class="titulo">Nossa empresa</h1>
+                <p>As vacinas dispõem de condições específicas para serem transportados por conta da sensibilidade às
+                    variações de temperatura. É crucial que os termolábeis permaneçam estáveis até chegar ao destino
+                    final, e esse é o maior desafio para a indústria farmacêutica.
+                    Nosso trabalho é minimizar os riscos das vacinas chegarem deteriodadas, trazendo segurança as
+                    pessoas, e aumentando o lucro de você, empresário.</p>
+            </div>
         </div>
         <div class="containermain2">
             <div class="icones">
-                <img src="icone-vacina-ps.png" alt="" style="height: 100px;">
-                <img src="icone-termometro-ps.png" alt="" style="height: 100px;">
-                <img src="icone-medico-ps-2.png" alt="" style="height: 100px;">
+                <img src="img-site/icone-medico-removebg-preview.png">
+                <img src="img-site/icone-termometro-removebg-preview.png">
+                <img src="img-site/icone-vacina-removebg-preview.png">
             </div>
             <div class="conteudo">
                 <div class="missao">
@@ -50,7 +58,7 @@
                 </div>
                 <div class="visao">
                     <h3 style="font-weight: bolder;">Visão: </h3>
-                   &nbsp; &nbsp; <div class="visaobox">&nbsp; Levar as pessoas medicamentos seguros e com qualidade</div>
+                   <div class="visaobox"> Levar as pessoas medicamentos seguros e com qualidade</div>
                 </div>
                 <div class="valores">
                     <h3 style="font-weight: bold;">Valores: </h3>
