--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -17,7 +17,7 @@
             <ul class="navbar-notificacao">
                 <li id="botao-um"><a href="" style="text-decoration: none;"> Notificações </a></li><br>
                 <li id="botao-dois"><a href="" style="text-decoration: none;"> Dashboard </a></li><br>
-                <li id="botao-tres"><a href="" style="text-decoration: none;"> Chamados</a></li><br>
+                <li id="botao-tres"><a href="" style="text-decoration: none;"> Contate-nos</a></li><br>
                 <li id="botao-sair"><a href="" style="text-decoration: none;"> Sair</a></li>
             </ul>
         </div>
