--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -10,63 +10,91 @@
 </head>
 
 <body>
-
+    <!--Botões da lateral esquerda-->
     <div class="caixa-notificacoes">
         <div class="caixa-navbar-notificacao">
             <img id="img-logo" src="logo_thermo-carry-ps.png" width="90%">
             <ul class="navbar-notificacao">
                 <li id="botao-um"><a href="" style="text-decoration: none;"> Notificações </a></li><br>
-                <li id="botao-dois"><a href="" style="text-decoration: none;"> Dashboard </a></li><br>
                 <li id="botao-tres"><a href="" style="text-decoration: none;"> Chamados</a></li><br>
                 <li id="botao-sair"><a href="" style="text-decoration: none;"> Sair</a></li>
             </ul>
         </div>
 
-
+        <!--Titulo principal da pagina-->
         <div class="caixas">
             <h1 class="titulo-notificacao">Notificações</h1>
 
-            <div class="caixa_vermelha">
-                <p id="div_frase1">
-                    <img id="img-alerta" src="alerta.png" width="20px"> &nbsp;
-                    <b>28 de Abril de 2022 | </b><strong> Caminhão de placa JU23L53 </strong>
-                    | <u>LOTE: TM123456789 em estado ineficaz!</u>
-                    <img id="img_foto1" src="fechar.png" width="10px" onclick="fechar()">
-                    <a href="#">Ver Dashboard</a>
+            <!--Notificação vermelha-->
+            <div class="caixa_amarela" id="teste" class="dragme">
+                <p>
+                    <img id="img-alerta" src="alerta.png"> &nbsp;
+                    <b>28 de Abril de 2022 |</b>
+                    <strong> Caminhão de placa JU23L53</strong> |
+                    <u>LOTE: TM123456789</u> &nbsp;
+                    <b>Ineficaz!</b>
+
+                    <a id="ver_dashboard" href="#">Ver Dashboard</a>
+
+                    <input type="button" id="fechar1" onclick="fechar1('teste')" value="X" />
                 </p>
             </div>
-            <div class="caixa-laranja">
-                <p id="div_frase2">
-                    <img id="img-alerta" src="alerta.png" width="20px"> &nbsp;
-                    <b>28 de Abril de 2022 | </b><strong> Caminhão de placa JU23L53 </strong>
-                    | <u>LOTE: TM123456789 próximo de ficarem ineficazes!</u>
-                    <img id="img_foto1" src="fechar.png" width="10px" onclick="fechar()">
-                    <br>
-                    <a href="#">Ver Dashboard</a>
+
+            <!--Notificação laranja-->
+            <div class="caixa_amarela" id="teste2" class="dragme">
+                <p>
+                    <img id="img-alerta" src="alerta.png"> &nbsp;
+                    <b>28 de Abril de 2022 |</b>
+                    <strong> Caminhão de placa JU23L53</strong> |
+                    <u>LOTE: TM123456789</u>&nbsp;
+                    <b>Alerta!!!!</b>
+
+                    <a id="ver_dashboard" href="#">Ver Dashboard</a>
+
+                    <input type="button" id="fechar2" onclick="fechar2('teste')" value="X" />
                 </p>
             </div>
-            <div class="caixa-amarela">
-                <p id="div_frase3">
-                    <img id="img-alerta" src="alerta.png" width="20px"> &nbsp;
-                    <b>28 de Abril de 2022 | </b><strong> Caminhão de placa JU23L53 </strong>
-                    | <u>LOTE: TM123456789 em alerta de temperatura!</u>
-                    <img id="img_foto1" src="fechar.png" width="10px" onclick="fechar()">
-                    <br>
-                    <a href="#">Ver Dashboard</a>
+
+            <!--Notificação amarela-->
+            <div class="caixa_amarela" id="teste3" class="dragme">
+                <p>
+                    <img id="img-alerta" src="alerta.png"> &nbsp;
+                    <b>28 de Abril de 2022 |</b>
+                    <strong> Caminhão de placa JU23L53</strong> |
+                    <u>LOTE: TM123456789</u> &nbsp;
+                    <b>Atenção!</b>
+
+                    <a id="ver_dashboard" href="#">Ver Dashboard</a>
+
+                    <input type="button" id="fechar3" onclick="fechar2('teste')" value="X" />
                 </p>
             </div>
         </div>
+
+    </div>
     </div>
 </body>
+
+<!--Rodapé da pagina-->
 <footer>
     <p class="conteudo_footer">© 2022 ThermoCarry • Todos os direitos reservados •</p>
 </footer>
 
 </html>
+
 <script>
-    function fechar() {
-        div_frase1.innerHTML = ""
-        div_frase2.innerHTML = ""
-        div_frase3.innerHTML = ""
+    var fechar2 = 
+
+    function fechar1(ID) {
+        document.getElementById(ID).style.display = "none";
     }
+
+    function fechar2(ID) {
+        document.getElementById(ID).style.display = "none";
+    }
+
+    function fechar3(ID) {
+        document.getElementById(ID).style.display = "none";
+    }
+
 </script>
