Pagina de notificação com alterações e sem o botão-três

--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -16,12 +16,7 @@
             <img id="img-logo" src="logo_thermo-carry-ps.png" width="90%">
             <ul class="navbar-notificacao">
                 <li id="botao-um"><a href="" style="text-decoration: none;"> Notificações </a></li><br>
-<<<<<<< HEAD
-                <li id="botao-tres"><a href="" style="text-decoration: none;"> Chamados</a></li><br>
-=======
-                <li id="botao-dois"><a href="" style="text-decoration: none;"> Dashboard </a></li><br>
-                <li id="botao-tres"><a href="" style="text-decoration: none;"> Contate-nos</a></li><br>
->>>>>>> dfb79e3ddd7d7ebadc17007d8575920300949720
+                <li id="botao-dois"><a href="" style="text-decoration: none;"> Chamados</a></li><br>
                 <li id="botao-sair"><a href="" style="text-decoration: none;"> Sair</a></li>
             </ul>
         </div>
@@ -84,7 +79,6 @@
 <footer>
     <p class="conteudo_footer">© 2022 ThermoCarry • Todos os direitos reservados •</p>
 </footer>
-
 </html>
 
 <script>
