Pagina de notificação

--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -36,7 +36,7 @@
 
                     <a id="ver_dashboard" href="#">Ver Dashboard</a>
 
-                    <input type="button" id="fechar1" onclick="fechar1('teste')" value="X" />
+                    <input type="button" id="fecha" onclick="fecha('teste')" value="X" />
                 </p>
             </div>
 
@@ -66,7 +66,7 @@
 
                     <a id="ver_dashboard" href="#">Ver Dashboard</a>
 
-                    <input type="button" id="fechar3" onclick="fechar2('teste')" value="X" />
+                    <input type="button" id="fechar3" onclick="fechar3('teste')" value="X" />
                 </p>
             </div>
         </div>
@@ -79,21 +79,18 @@
 <footer>
     <p class="conteudo_footer">© 2022 ThermoCarry • Todos os direitos reservados •</p>
 </footer>
+
 </html>
 
 <script>
-    var fechar2 = 
-
-    function fechar1(ID) {
-        document.getElementById(ID).style.display = "none";
+    function fecha(ID) {
+        document.getElementById("teste").style.display = "none";
     }
-
     function fechar2(ID) {
-        document.getElementById(ID).style.display = "none";
+        document.getElementById("teste2").style.display = "none";
     }
 
     function fechar3(ID) {
-        document.getElementById(ID).style.display = "none";
+        document.getElementById("teste3").style.display = "none";
     }
-
 </script>
