--- a/pagina-chamado/chamado.html
+++ b/pagina-chamado/chamado.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logo_thermo-carry-2.png" type="image/x-icon" />
-    <title>ThermoCarry - Chamado</title>
+    <title>Chamados</title>
     <link rel="stylesheet" href="chamado-style.css">
 </head>
 
@@ -16,27 +16,36 @@
         <div class="caixa-navbar-chamado">
             <img id="img-logo" src="logo_thermo-carry-ps.png" width="90%">
             <ul class="navbar-chamado">
-                <li id="botao-um"><a href="" style="text-decoration: none;"> Notificações </a></li><br>
-                <li id="botao-dois"><a href="" style="text-decoration: none;"> Dashboard </a></li><br>
-                <li id="botao-tres"><a href="" style="text-decoration: none;"> Contate-nos</a></li><br>
-                <li id="botao-sair"><a href="" style="text-decoration: none;"> Sair</a></li>
+                <li id="botao-um"><a href="" style="text-decoration: none; color: white;"> Notificações </a></li><br>
+                <li id="botao-dois"><a href="" style="text-decoration: none; color: white;"> Chamados</a></li><br>
+                <li id="botao-sair"><a href="" style="text-decoration: none; color: white;"> Sair</a></li>
             </ul>
         </div>
 
 
         <div class="caixas">
-            <h1 class="titulo-chamado">Contate-nos</h1>
+            <h1 class="titulo-chamado">Chamados</h1>
 
-            <h2 class="abrir-chamado">Problemas com algum caminhão, lote ou outras pendências?  
+            <h2 class="abrir-chamado">Problemas com algum caminhão, lote ou outras questões?  
             Abra agora um chamado e resolva da maneira mais rápido possível,  
-            detalhando a situação e sua urgência.  <br>
+            detalhando a situação.  <br>
             Se necessário, diga também como gostaria que o problema fosse resolvido 
-            e possíveis observações.</h2>
+            e possíveis observações.</h2> 
             
             <button class="botao-chamado" onclick="abrir()">Abrir um Chamado</button>
 
             <div id=div_chamado style="display:none">
-                <textarea id="ta_chamado" cols="30" rows="5"></textarea> <br>
+
+                <select id="sel_chamado">
+                    <option value="" hidden>Selecione o tipo de problema</option>
+                    <option value="caminhão">Caminhão</option>
+                    <option value="lote">Lote</option>
+                    <option value="percurso">Percurso</option>
+                    <option value="motorista">Motorista</option>
+                    <option value="outro">Outro</option>
+                </select> <br>
+
+                <textarea id="ta_chamado" cols="30" rows="5" placeholder="Digite aqui seu chamado"></textarea> <br> 
                 <button id="botao-enviar" onclick="enviar()">Enviar</button>
             </div>
 
@@ -59,9 +68,16 @@
     }
 
     function enviar (){
-        
+        var chamado = ta_chamado.value
+
+        if (chamado == "" || sel_chamado.value == "") {
+            alert ('Por favor, faça o seu chamado antes de enviá-lo.')
+        } else{
+
         alert ('Seu chamado foi enviado com sucesso! Aguarde sua resposta.')
         ta_chamado.value = " "
+        sel_chamado.value = ""
         div_chamado.style.display = 'none'
+        }
     }
 </script>
