Paginas de notificação, chamado e simulador atualizados

--- a/pagina-chamado/chamado.html
+++ b/pagina-chamado/chamado.html
@@ -26,8 +26,8 @@
         <div class="caixas">
             <h1 class="titulo-chamado">Chamados</h1>
 
-            <h2 class="abrir-chamado">Problemas com algum caminhão, lote ou outras questões?  
-            Abra agora um chamado e resolva da maneira mais rápido possível,  
+            <h2 class="abrir-chamado">  
+            Abra aqui um chamado e resolva da maneira mais rápido possível,  
             detalhando a situação.  <br>
             Se necessário, diga também como gostaria que o problema fosse resolvido 
             e possíveis observações.</h2> 
