--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Notificações</title>
     <link rel="stylesheet" href="style-usuario.css">
 </head>
