--- a/pagina-notificacao/notificacoes.html
+++ b/pagina-notificacao/notificacoes.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Notificações</title>
-    <link rel="stylesheet" href="style-usuario.css">
+    <link rel="stylesheet" href="notificacao-style.css">
 </head>
 
 <body>
