adicionando detalhes na página-chamado

--- a/site-estatico/paginas-usuario/pagina-chamado/confirmacao.html
+++ b/site-estatico/paginas-usuario/pagina-chamado/confirmacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="logo_thermo-carry-2.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img-site/logo_thermo-carry-2.png" type="image/x-icon" />
     <title>Chamados</title>
     <link rel="stylesheet" href="pagina_confirmacao.css">
 </head>
@@ -16,7 +16,7 @@
         <img src="img-site/check-icone-scaled.png" alt="">
     </div>
     <div class="mensagem">
-        <p>Agradecemos o contato, entraremos em contato assim que possível com uma solução para o seu problema</p>
+        <p>Agradecemos o chamado, entraremos em contato assim que possível com uma solução para o seu problema!</p>
     </div>
 
     <button onclick="voltar()">Voltar</button>
