detalhes paginas cadastro e login

--- a/site-estatico/login/login.html
+++ b/site-estatico/login/login.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="login.css">
     <link rel="shortcut icon" href="img-site/logo_thermo-carry-2.png" type="image/x-icon" />
-    <title>ThermoCarry - Template</title>
+    <title>ThermoCarry - Login</title>
 </head>
 
 <body>
@@ -41,8 +41,8 @@
             </div>
             <div class="info">
                 <div class="texto">
-                    Email <input type="text" id="i_email" placeholder="Email" style="height: 20px "> <br> <br>
-                    Senha <input type="password" id="i_senha" placeholder="Senha" style="height: 20px"> <br> <br>
+                    E-mail: <input type="text" id="i_email" placeholder="Insira seu e-mail" style="height: 20px "> <br> <br>
+                    Senha: <input type="password" id="i_senha" placeholder="Insira sua senha" style="height: 20px"> <br> <br>
                     <div class="ancora"> <a href="#">Esqueceu a senha?</a> <br>
                         Não tem Cadastro? <a href="#"> cliquei aqui</a> <br> </div>
                     <button class="botao" onclick="entrar()">Entrar</button>
