detalhes nas paginas de cadastro e login

--- a/site-estatico/Cadastro/cadastro.html
+++ b/site-estatico/Cadastro/cadastro.html
@@ -24,7 +24,7 @@
 
         <div class="titulo" style="text-decoration: none;">
             <img id="imagem" src="./img-site\usuariologin1.png" style="height: 50px;">
-            <b>Login</b>
+            <b>cadastro</b>
         </div>
 
 
