adicionando metricas sem os dados

--- a/site-estatico/paginas-usuario/dashboard/index.html
+++ b/site-estatico/paginas-usuario/dashboard/index.html
@@ -31,6 +31,15 @@
             <div class="container_conteudo">
                 <div class="grafico">
                     <h1>Caminhão 1</h1>
+                    <div class="metricas">
+                        <div class="dados_metricas" id="critico_e"><p class="p_critico">Critico</p></div>
+                        <div class="dados_metricas" id="emergencia_e"><p class="p_emergencia">Emergencia</p></div>
+                        <div class="dados_metricas" id="alerta_e"><p class="p_alerta">Alerta</p></div>
+                        <div class="dados_metricas" id="ideal_e"><p class="p_ideal">Ideal</p></div>
+                        <div class="dados_metricas" id="alerta_d"><p class="p_alerta">Alerta</p></div>
+                        <div class="dados_metricas" id="emergencia_d"><p class="p_emergencia">Emergencia</p></div>
+                        <div class="dados_metricas" id="critico_d"><p class="p_critico">Critico</p></div>
+                    </div>
                     <div class="info">
                         <h3>Informações do Caminhão</h3>
                         <div class="info_dados">
