--- a/site-estatico/paginas-usuario/pagina-notificacao/notificacoes.html
+++ b/site-estatico/paginas-usuario/pagina-notificacao/notificacoes.html
@@ -18,6 +18,7 @@
             <div class="navbar">
                 <span><a href="../pagina-notificacao/notificacoes.html">Notificação</a></span>
                 <span><a href="../pagina-chamado/chamado.html">Chamado</a></span>
+                <span><a href="../dashboard/index.html">Dashboard</a></span>
                 <span id="sair"><a href="../../home/TelaHome.html">Sair</a></span>
             </div>
         </div>
