--- a/site-estatico/paginas-usuario/dashboard/index.html
+++ b/site-estatico/paginas-usuario/dashboard/index.html
@@ -31,7 +31,8 @@
             <div class="container_conteudo">
                 <div class="grafico">
                     <h1>Caminhão 1</h1>
-                    <div class="metricas"> <!-- DADOS DA VACINA CORONAVAC -->
+                    <div class="metricas">
+                        <!-- DADOS DA VACINA CORONAVAC -->
                         <div class="dados_metricas" id="critico_e">
                             <p class="p_critico">Critico</p>
                             <div class="resultado_metricas">
@@ -124,7 +125,7 @@
 
 <script>
     var cor = []
-    const dataTemp = [2, 4, 4, 3, 4]
+    const dataTemp = [3, 4, 8, 5, 3]
     const labels = [
         '10:30',
         '11:00',
@@ -133,17 +134,11 @@
         '12:30',
     ];
 
-    for (var i = 0; i < dataTemp.length; i++){
-        if(dataTemp[i]>2){
-            cor.push('green')
-        }
-    }
-
     const data = {
         labels: labels,
         datasets: [{
             label: 'Temperatura',
-            backgroundColor: 'rgb(0, 0, 255, 0.6)' , 
+            backgroundColor: 'rgb(0, 0, 255, 0.6)',
             borderColor: 'rgb(0, 0, 255)',
             data: dataTemp,
         }]
@@ -153,24 +148,21 @@
         type: 'line',
         data: data,
         options: {
-/*             scales:{
+            scales: {
                 yAxes: [{
-                    gridlines :{
-                        display: false,
-                        drawBorder: false
+                    ticks: {
+                        min: 0,
+                        max: 8,
                     }
                 }]
-            } */
+            }
         }
     };
 
 </script>
 <script>
-    /*     const myChart = new Chart( */
     const ctx = document.getElementById('myChart').getContext("2d")
     const myChart = new Chart(ctx, config)
-/*       config
-                ); */
 </script>
 
 
